--- a/k.ipynb
+++ b/k.ipynb
@@ -5,11 +5,22 @@
    "metadata": {},
    "source": [
     "<table class=\"notebook-buttons\" align=\"left\">\n",
-    "  <td>\n",
-    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/d2l-ai/textbook-solutions/blob/master/Solutions/18.%20Appendix%20Mathematics%20for%20Deep%20Learning/18.3.%20Single%20Variable%20Calculus.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" /></a>\n",
+    " <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/d2l-ai/textbook-solutions/blob/master/Solutions/18.%20Appendix%20Mathematics%20for%20Deep%20Learning/18.3.%20Single%20Variable%20Calculus.ipynb\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" />    </a>\n",
     "  </td>\n",
     "</table>\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+    "  <td>\n",
+    "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/d2l-ai/textbook-solutions/blob/master/Solutions/18.%20Appendix%20Mathematics%20for%20Deep%20Learning/18.3.%20Single%20Variable%20Calculus.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" />  Open in Colab          </a>\n",
+    "  </td>"
    ]
   },
   {
